# admin_demo

demo_backend/: .gitignore  crud.py  database.py  demo.db  main.py  models.py  pyproject.toml
demo_backend/auth/: authop.py
demo_backend/db/: database.py  demo.db
demo_backend/models/: student_model.py
demo_backend/schemas/: student_schema.py
demo_frontend/: README.md  bun.lockb  package.json
demo_frontend/src/: App.vue  types.ts
demo_frontend/src/services/: apiClient.ts  studentService.ts
